# simulador-de-carga-con-mongo-kafka-postgres

./: .gitignore  GUIDE.MD  README.md  docker-compose.yml  exampleInsert.md  mongo-source.json  postgres-sink.json  setup-cdc.sh  setup.sh
chunkattack/: Dockerfile  generar.py
kafka-connect/: Dockerfile
scripts/: mongo-entrypoint.sh
simulador/: .env.example  Cargo.toml  Dockerfile  PATCH_CSV_PATH.md
simulador/src/: main.rs
