[package]
name        = "simulador"
version     = "0.1.0"
edition     = "2021"

[[bin]]
name = "simulador"
path = "src/main.rs"

[dependencies]
tokio        = { version = "1",    features = ["full"] }
mongodb      = { version = "2",    features = ["tokio-runtime"] }
serde        = { version = "1",    features = ["derive"] }
rand         = "0.8"
csv          = "1"
futures      = "0.3"
hdrhistogram = "7"

[profile.release]
opt-level = 3
